# In-Sync-OM-Public

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: install.md  structure.md
games/: plaingame.py  styledgame.py  testfunc.py
utils/: logo.py  tools.py  utilities.py
